--- a/fudcon.fedoraproject.org/data/content/APAC/index.html
+++ b/fudcon.fedoraproject.org/data/content/APAC/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="splash_img">
         <!-- Start Featured Image -->
-          <img src="${path}/static/images/phnom_penh.jpg" width='630' height='250' alt="Phnom Penh" title="Phnom Penh 2016 FUDcon"/>
+          <img src="${path}/static/images/phnom_penh.png" width='630' height='250' alt="Phnom Penh" title="Phnom Penh 2016 FUDcon"/>
         <!-- End Featured Image -->
       </div>
     </div>
@@ -53,7 +53,7 @@
       <div class="one_column_division">
         <div class="column_row_img" id="column_one_pp"> </div>
         <h4>FUDCon will be held in Phnom Penh, Cambodia</h4>
-        <h3>Phnom Penh - October, 2016</h3>
+        <h3>Phnom Penh - November 4 - 6, 2016</h3>
         <p><strong><a href="https://fedoraproject.org/wiki/FUDCon" title="FUDCon">FUDCon (Fedora Users and Developers Conference)</a></strong> is an important event in the world of free software that is held in different parts of the world, typically once a year to the region. The FUDCon is a combination of sessions, talks, workshops and hackfest in which project participants can work on specific initiatives. Topics include: infrastructure, development of features, construction and / or consolidation of the community, management and governance, marketing, testing and QA, packaging, etc..</p>
         <p><a href="location.html"><strong>Learn more about the locations and local facilities</strong></a></p>
       </div>
