--- a/fudcon.fedoraproject.org/data/content/APAC/location.html
+++ b/fudcon.fedoraproject.org/data/content/APAC/location.html
@@ -48,7 +48,7 @@
   <div class="central_container">
     <div class="central_content">
       <div class="one_column_division">
-        <h4>Phnom Penh - October, 2016</h4>
+        <h4>Phnom Penh - November 4 - 6, 2016</h4>
         <br />
         <h3>Location</h3>
         <h2>Phnom Penh, Cambodia</h2>
@@ -56,8 +56,8 @@
         <div class="one_column_division" id="venue">
         <!-- <div class="column_row_img" id="venue_img"> </div> -->
           <h5>Venue</h5>
-          <h6><a href="http://www.itc.edu.kh/"> Institute of Technology of Cambodia</a></h6>
-            <p><a href="https://goo.gl/maps/hf0td">Russian Conf. Blvd,Phnom Penh, Cambodia.</a><br />BarCamp Phnom Penh has on saturday morning their opening remark (08:30-09:30) in the largest room (2.500), we are invited to join this opening ceremony. We will have a big hall (400 people) for our keynote in the afternoon. We will use this hall as our own dedicated room for our sessions. All rooms are equipped with projectors and wifi is available on the whole ground of ITC. </p>
+          <h6><a href="http://www.norton-u.com/"> Norton University (NU)</a></h6>
+            <p><a href="https://goo.gl/maps/geRrhvd1qYU2">St. Keo Chenda, Sangkat Chroy Changva, Khan Russey Keo, Phnom Penh, Cambodia</a><br />BarCamp Phnom Penh has on saturday morning their opening remark (08:30-10:30) in the largest room (500 <a href="https://goo.gl/maps/s69b4ugSEp32"> take a look into it</a>), we are invited to join this opening ceremony. We will have a this big hall (500 people) for the rest of the time. We will use this hall as our own dedicated room for our sessions. </p>
         </div>
         <p>
         <h2>Useful info:</h2>
