--- a/fudcon.fedoraproject.org/data/content/index.html
+++ b/fudcon.fedoraproject.org/data/content/index.html
@@ -98,13 +98,13 @@
       <div class="one_column_division">
         <div id="column_one">
           <h4><a href="APAC/">APAC: FUDCon Phnom Penh 2016</a></h4>
-          <h3><a href="APAC"> Phnom Penh, Cambodia - October, 2016</a></h3>
+          <h3><a href="APAC"> Phnom Penh, Cambodia - November 4 - 6, 2016</a></h3>
 				  <div id="imgbox"><a href="APAC/"><img style="padding-top:60px" src="${path}/static/images/logo_phnompenh_2016.png" width="260px" height="170px" class="center" /></a></div>
           <p><a href="APAC/"><strong>Learn more about FUDCon Cambodia 2016 Here</strong></a></p>
 				</div>
         <div id="column_two">
           <h4><a href="LATAM/">LATAM: FUDCon Puno 2016</a></h4>
-          <h3><a href="LATAM/"> Puno, Perù - October 13 through 16, 2016</a></h3>
+          <h3><a href="LATAM/"> Puno, Perù - October 13 - 16, 2016</a></h3>
 					<div id="imgbox"><a href="LATAM/"><img style="padding-top:60px" src="${path}/static/images/logo_puno_2016.jpg" width="260px" height="170px" class="center" /></a></div>
           <p><a href="LATAM/"><strong>Learn more about FUDCon Perù 2016 Here</strong></a></p>
 				</div>
