re-add the News fo spins.fpo - we have a prerelease again

--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -173,7 +173,7 @@
 
   </div>
 
-<!-- News
+<!-- News -->
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -209,6 +209,6 @@
           </div>
         </py:otherwise>
       </py:choose>
--->
+
 </body>
 </html>
