SoaS and Xfce are back again - readd them to F25-Alpha

--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -58,7 +58,7 @@
   	  	  </div>
        </div>
 
-<!--       <div class="high">
+       <div class="high">
     	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
@@ -79,7 +79,6 @@
   	  	   </div>
   	  	  </div>
        </div>
--->
 
        <div class="high">
     	  <div class="row top-margin">
@@ -147,7 +146,7 @@
   	  	  </div>
        </div>
 
-<!--       <div class="high">
+       <div class="high">
     	  <div class="row top-margin bottom-space">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
@@ -168,7 +167,6 @@
   	  	   </div>
   	  	  </div>
        </div>
--->
 
   	</div>
   </header>
