make "announcement" translatable

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -127,8 +127,8 @@
 
         <p>${_('FCL = Fedora Community Action and Impact Lead')}</p>
         <ul>
-          <li>Fedora 22-23: Remy DeCausemaker (<a href="https://fedoramagazine.org/5tftw-2015-02-13/">announcement</a>)</li>
-          <li>Fedora 24+: Brian Exelbierd (<a href="https://fedoramagazine.org/welcoming-new-fedora-community-coordinator/">announcement</a>)</li>
+          <li>Fedora 22-23: Remy DeCausemaker (<a href="https://fedoramagazine.org/5tftw-2015-02-13/">${_(announcement')}</a>)</li>
+          <li>Fedora 24+: Brian Exelbierd (<a href="https://fedoramagazine.org/welcoming-new-fedora-community-coordinator/">${_(announcement')}</a>)</li>
         </ul>
 
 
